<resources>
    <string name="app_name">Gerenciador Financeiro</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="button_send">Enviar</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="title_activity_cadastrar_categoria">Cadastrar Categoria</string>
    <string name="titulo_home">Início</string>
    <string name="titulo_grafico">Gráfico</string>
    <string name="titulo_sobre">Sobre</string>
    <string name="titulo_mais_opcao">...</string>
    <string name="nova_transacao">Nova Transação</string>
    <string name="voltar">Voltar</string>
    <string name="sair">Sair</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_cadastrar_categoria">Cadastrar Categoria</string>
    <string name="title_activity_tela_inicial">Tela Inicial</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="label_receita">Receita</string>
    <string name="label_despesa">Despesa</string>
    <string name="label_cartoes">Cartões</string>
    <string name="label_saldo_atual">Saldo Atual R$</string>
    <string name="label_versao">Versão 1.0</string>
    <string name="label_celular">Iphone/Android</string>
    <string name="label_desenvolvido">Desenvolvido na FEAN</string>
    <string name="label_alunos">Rafael e Guilherme</string>
    <string name="label_disciplina">Programação</string>
    <string name="data">Data</string>
    <string name="debito">Débito</string>
    <string name="credito">Crédito</string>
    <string name="categoria">Categoria</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="cadastrar_categoria">Cadastrar Categoria</string>
    <string name="btn_alterar_categoria">Alterar Categoria</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="usuario">Usuário</string>
    <string name="btn_alterar_usuario">Alterar Usuário</string>
</resources>
