<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/add"
        android:icon="@drawable/icone_mais"
        app:showAsAction="always"
        android:title="@string/nova_transacao"/>

    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:title="@string/titulo_sobre">
    </item>

    <item
        android:id="@+id/lista_categoria"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:title="@string/categoria">
    </item>

    <item
        android:id="@+id/graficos"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:title="@string/titulo_grafico">
    </item>

    <item
        android:id="@+id/exit"
        app:showAsAction="never"
        android:title="@string/sair">
    </item>


</menu>