<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.fean.gerenciadorfinanceiro.activity.TelaInicialActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.07">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_saldo_atual"
                android:layout_alignParentRight="false"
                android:layout_alignParentBottom="false"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="30dp"
                android:fontFamily="monospace"
                android:textSize="18dp"
                android:id="@+id/saldo" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="155dp"
                android:id="@+id/valor_saldo_atual"
                android:hint="R$150,00"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_receita"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="monospace"
            android:textSize="14dp"
            android:id="@+id/textView" />
            
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"
                android:id="@+id/valor_receita"
                android:hint="R$40,00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_despesa"
                android:layout_alignParentRight="false"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="170dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="monospace"
                android:textSize="14dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="170dp"
                android:id="@+id/valor_despesa"
                android:hint="R$55,00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cartoes"
                android:layout_alignParentRight="false"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="300dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="monospace"
                android:textSize="14dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="300dp"
                android:id="@+id/valor_cartao"
                android:hint="R$89,00"/>

        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:src="@drawable/grafico" />
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
